2001-05-09  Martin Baulig  <baulig@suse.de>

	* gnome-entry.h (gnome_entry_new_full): New function.

	* gnome-file-entry.[ch]: New files; this already existed in
	GNOME 1.x, but we're now using the new GnomeSelector API.

2001-05-08  Martin Baulig  <baulig@suse.de>

	* gnome-entry.[ch]: Reflect latest GnomeSelector API changes.

2001-05-08  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.h (gnome_selector_client_set_uri):
	Added `GDestroyNotify destroy_fn' argument.

	* gnome-selector-client.c (gnome_selector_client_set_uri):
	Actually invoke the async_func when we get the event.

2001-05-08  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.h
	(GnomeSelectorClientAsyncHandle): New typedef.
	(GnomeSelectorClientAsyncFunc): New typedef.
	(gnome_selector_client_get_uri): New function.
	(gnome_selector_client_set_uri): New function.

2001-05-08  Martin Baulig  <baulig@suse.de>

	* gnome-selectorP.h: Removed.
	* gnome-selector.[ch]: Removed, this is now in libgnome.
	* gnome-file-selector.[ch]: Removed, this is now in libgnome.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* gnome-entry.h (gnome_entry_construct): New function.
	(gnome_entry_new_from_selector): This function was formerly known
	as gnome_entry_construct_from_selector().

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.[ch]: New files.
	(GnomeSelectorClient): This is derived from BonoboWidget and
	is the client side wrapper for a GNOME::Selector CORBA object.

	* gnome-entry.h (GnomeEntry): Derive this from GnomeSelectorClient.
	(gnome_entry_construct_from_selector): New function.

	* gnome-boxed.defs (GnomeSelectorAsyncHandle): Removed.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnomemarshal.list, gnomemarshal-main.c: Moved to libgnome.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-dock*.[ch]: Removed; use BonoboDock instead.

	* gnome-app.[ch], gnome-app-helper.[ch], gnome-appbar.[ch],
	gnome-stock.[ch]: Removed.
