@@ -65,7 +65,7 @@ struct _GnomeFileEntryClass {
 
 GType        gnome_file_entry_get_type          (void) G_GNUC_CONST;
 
-GtkWidget   *gnome_file_entry_new               (const gchar        *history_id);
+GtkWidget   *gnome_file_entry_new               (void);
 
 GtkWidget   *gnome_file_entry_new_from_selector (GNOME_Selector      corba_selector,
                                                  Bonobo_UIContainer  uic);
